--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "normalizr": "^3.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-is": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
